--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -54,7 +54,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--font-primary);
+  font-family: var(--font-secondary);
 }
 
 /*--------------------------------------------------------------
