--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -368,7 +368,7 @@ section {
   .navbar a:focus {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding: 0 3px;
     font-family: var(--font-secondary);
     font-size: 16px;
@@ -410,7 +410,7 @@ section {
   .navbar .active,
   .navbar .active:focus,
   .navbar li:hover>a {
-    color: #fff;
+    color: #212529;
   }
 
   .navbar .dropdown ul {
