--- a/public/admin-assets/scss/width-height.scss
+++ b/public/admin-assets/scss/width-height.scss
@@ -25,20 +25,10 @@ $desktop_maxwidth: 19.5px;
 $desktop_minheight: 11.5px;
 $desktop_maxheight: 16.5px;
 
-$_minwidth: 25.5px;
+$_minwidth: 19.5px;
 $_maxwidth: 25.5px;
-$_minheight: 25.5px;
-$_maxheight: 25.5px;
-
-
-.cqw-#{$num} {
-  min-width: calc(#{$num} * #{$_minwidth}) !important;
-  max-width: calc(#{$num} * #{$_maxwidth}) !important;
-}
-.cqh-#{$num} {
-  min-height: calc(#{$num} * #{$_minheight}) !important;
-  max-height: calc(#{$num} * #{$_maxheight}) !important;
-}
+$_minheight: 9.5px;
+$_maxheight: 19.5px;
 
 
 // Mobile 
@@ -98,6 +88,22 @@ $_maxheight: 25.5px;
     .cqh-#{$num} {
       min-height: calc(#{$num} * #{$desktop_minheight}) !important;
       max-height: calc(#{$num} * #{$desktop_maxheight}) !important;
+    }
+  }
+}
+
+// Neutral
+@media screen and (min-width: 1280px) {
+  @for $num from $min_cqh through $max_cqh {
+    .cqh-#{$num} {
+      min-height: calc(#{$num} * #{$_minheight}) !important;
+      max-height: calc(#{$num} * #{$_maxheight}) !important;
+    }
+  }
+  @for $num from $min_cqw through $max_cqw {
+    .cqw-#{$num} {
+      min-width: calc(#{$num} * #{$_minwidth}) !important;
+      max-width: calc(#{$num} * #{$_maxwidth}) !important;
     }
   }
 }
