--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1755,3 +1755,263 @@ time {
         height: 36px;
         border-radius: 50%;
     }
+
+    :root {
+      --grey-d1: #585858;
+      --grey-d2: #F4F4F4;
+      --grey-d3: #000000;
+      --red-1: #F2B8D1;
+      --red-2: #F04B92;
+      --red-3: #EB1E77;
+      --red-4: #AD1257;
+      --white: #FFFFFF;
+      --blue: #329EF4;
+      --grey: #eeeeee;
+  }
+  
+  .card-1, .card-2, .card-3, .card-4, .card-5, .card-6, .card-7 {
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 2px 2px 5px 2px #D7D7D7;
+  }
+  .chart-lbl {
+      margin: 10px;
+      font-size: 12px;
+      color: var(--grey-d3);
+      opacity: 0.8;
+  }
+  .content-center {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+  .divider {
+      background-color: var(--grey-d2);
+      height: 2px;
+      margin: auto;
+      width: 98%;
+  }
+  
+  /*  media queries */
+  
+  @media only screen and (min-width: 320px) {
+      .doughnut-chart-container, .pie-chart-container, .polar-chart-container {
+          margin: 5% auto 5% auto;
+          position: relative;
+          width: 95%;
+      }
+      /*doughnut chart*/
+      .card-1 {
+          grid-row: 1 / 2;
+      }
+      /*pie chart*/
+      .card-2 {
+          grid-row: 2 / 3;
+      }
+      /*polar area*/
+      .card-3 {
+          grid-row: 3 / 4;
+      }
+      /*bubble chart*/
+      .card-4 {
+          grid-row: 4 / 5;
+      }
+      /*bar chart*/
+      .card-5 {
+          grid-row: 5 / 6;
+      }
+      /*line chart*/
+      .card-6 {
+          grid-row: 6 / 7;
+      }
+      /*mixed chart*/
+      .card-7 {
+          grid-row: 7 / 8;
+      }
+      .line-chart-container, .bar-chart-container, .bubble-chart-container, .mixed-chart-container {
+          height: 70%;
+          margin: 5% auto 5% auto;
+          position: relative;
+          width: 90%;
+      }
+  }
+  
+  @media only screen and (min-width: 750px) {
+      /*doughnut chart*/
+      .card-1 {
+          grid-column: 1 / 2;
+          grid-row: 1 / 3;
+      }
+      /*pie chart*/
+      .card-2 {
+          grid-column: 2 / 3;
+          grid-row: 1 / 3;
+      }
+      /*polar area*/
+      .card-3 {
+          grid-column: 1 / 2;
+          grid-row: 3 / 5;
+      }
+      /*bubble chart*/
+      .card-4 {
+          grid-column: 2 / 3;
+          grid-row: 3 / 5;
+      }
+      /*bar chart*/
+      .card-5 {
+          grid-column: 1 / 3;
+          grid-row: 5 / 7;
+      }
+      /*line chart*/
+      .card-6 {
+          grid-column: 1 / 3;
+          grid-row: 7 / 9;
+      }
+      /*mixed chart*/
+      .card-7 {
+          grid-column: 1 / 3;
+          grid-row: 9 / -1;
+      }
+      .line-chart-container, .bar-chart-container, .bubble-chart-container, .mixed-chart-container {
+          margin: 2% auto 3% auto;
+      }
+  }
+  @media only screen and (min-width: 1000px) {
+      .bar-chart-container {
+          width: 90%;
+          height: 70%;
+          margin-top: 10%;
+      }
+      .bubble-chart-container, .line-chart-container {
+          margin: 1% auto 0 auto;
+          width: 90%;
+          height: 65%;
+      }
+      /*doughnut chart*/
+      .card-1 {
+          grid-column: 10 / -1;
+          grid-row: 1 / 5;
+      }
+      /*pie chart*/
+      .card-2 {
+          grid-column: 10 / -1;
+          grid-row: 5 / 9;
+      }
+      /*polar area*/
+      .card-3 {
+          grid-column: 1 / 6;
+          grid-row: 9 / -1;
+      }
+      /*bubble chart*/
+      .card-4 {
+          grid-column: 4 / 10;
+          grid-row: 1 / 5;
+      }
+      /*bar chart*/
+      .card-5 {
+          grid-column: 1 / 4;
+          grid-row: 1 / 9;
+      }
+      /*line chart*/
+      .card-6 {
+          grid-column: 4 / 10;
+          grid-row: 5 / 9;
+      }
+      /*mixed chart*/
+      .card-7 {
+          grid-column: 6 / -1;
+          grid-row: 9 / -1;
+      }
+      .content-height {
+          height: 70%;
+      }
+      .doughnut-chart-container, .pie-chart-container{
+          margin: 0 auto 2% auto;
+          width: 95%;
+      }
+      .polar-chart-container {
+          margin-top: 2%;
+          width: 95%;
+      }
+      .radar-chart-container {
+          width: 75%;
+          margin-top: 3%;
+      }
+  }
+  @media only screen and (min-width: 1300px) {
+      .doughnut-chart-container, .pie-chart-container{
+          margin: 0 auto 2% auto;
+          width: 80%;
+      }
+      .polar-chart-container {
+          margin-top: 2%;
+          width: 85%;
+      }
+  }
+  .bg-gradient-primary {
+    background-image: linear-gradient(310deg, #115245 0%, #0f9874 100%);
+  }
+  .icon-shape {
+      width: 50px;
+      height: 48px;
+      background-position: center;
+      border-radius: 0.75rem;
+      color: white;
+  }
+  .icon-shape {
+    width: 48px;
+    height: 48px;
+    background-position: center;
+    border-radius: 0.75rem;
+  }
+  
+  .icon-shape i {
+    color: #fff;
+    opacity: 0.8;
+    top: 11px;
+    position: relative;
+  }
+  
+  .icon-shape .ni {
+    top: 14px;
+  }
+  
+  .icon-xxs {
+    width: 20px;
+    height: 20px;
+  }
+  
+  .icon-xxs i {
+    top: -4px;
+    font-size: .5rem;
+  }
+  
+  .icon-xs {
+    width: 24px;
+    height: 24px;
+  }
+  
+  .icon-xs i {
+    top: -4px;
+    font-size: .5rem;
+  }
+  
+  .icon-sm {
+    width: 32px;
+    height: 32px;
+  }
+  
+  .icon-sm i {
+    top: 2px;
+    font-size: .65rem;
+  }
+  
+  .icon-md {
+    width: 48px;
+    height: 48px;
+  }
+  
+  .icon-md i {
+    top: 22%;
+    font-size: 0.875rem;
+  }
